[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/main_menu/custom_game/server_settings/server_settings.gd" type="Script" id=1]

[node name="ServerSettings" type="PanelContainer"]
margin_right = 178.0
margin_bottom = 118.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 171.0
margin_bottom = 139.0

[node name="Map" type="HBoxContainer" parent="VBox"]
margin_right = 164.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBox/Map"]
margin_top = 5.0
margin_right = 31.0
margin_bottom = 19.0
text = "Map:"

[node name="LineEdit" type="LineEdit" parent="VBox/Map"]
margin_left = 35.0
margin_right = 164.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="TeamsEnabled" type="CheckBox" parent="VBox"]
margin_top = 28.0
margin_right = 164.0
margin_bottom = 52.0
pressed = true
text = "Teams enabled"

[node name="TeamsCount" type="HBoxContainer" parent="VBox"]
margin_top = 56.0
margin_right = 164.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="VBox/TeamsCount"]
margin_top = 5.0
margin_right = 86.0
margin_bottom = 19.0
text = "Teams count:"

[node name="SpinBox" type="SpinBox" parent="VBox/TeamsCount"]
margin_left = 90.0
margin_right = 164.0
margin_bottom = 24.0
min_value = 2.0
max_value = 6.0
value = 2.0

[node name="SlotsCount" type="HBoxContainer" parent="VBox"]
margin_top = 84.0
margin_right = 164.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="VBox/SlotsCount"]
margin_top = 5.0
margin_right = 75.0
margin_bottom = 19.0
text = "Slots count:"

[node name="SpinBox" type="SpinBox" parent="VBox/SlotsCount"]
margin_left = 79.0
margin_right = 153.0
margin_bottom = 24.0
min_value = 1.0
value = 1.0

[node name="Mode" type="HBoxContainer" parent="VBox"]
margin_top = 112.0
margin_right = 164.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="VBox/Mode"]
margin_top = 3.0
margin_right = 40.0
margin_bottom = 17.0
text = "Mode:"

[node name="OptionButton" type="OptionButton" parent="VBox/Mode"]
margin_left = 44.0
margin_right = 73.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="VBox/TeamsEnabled" to="." method="_on_teams_toggled"]
[connection signal="value_changed" from="VBox/TeamsCount/SpinBox" to="." method="_on_teams_count_changed"]
[connection signal="value_changed" from="VBox/SlotsCount/SpinBox" to="." method="_on_slots_count_changed"]
[connection signal="item_selected" from="VBox/Mode/OptionButton" to="." method="_on_gamemode_changed"]
